--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dat-swarm-defaults": "^1.0.1",
     "discovery-swarm": "^5.1.2",
+    "dns-discovery": "^6.1.0",
     "duplexify": "^3.6.0",
     "hyperclock": "^1.0.0",
     "hypercore-crypto": "^1.0.0",
